keda/ServiceBus/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-processor-api
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
