keda/ServiceBus/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: event-processor-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /event-processor(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-processor-api
                port:
                  number: 80
